fixed alignment in login form

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,4 @@
+/* general */
 html, body {
     padding: 0px;
     margin: 0px;
@@ -11,9 +12,11 @@ body {
     border: 3px solid gold;
 }
 
-/* #loginform {
-    display: none;
-} */
+a {
+    cursor: pointer;
+}
+
+
 
 /* welcomme page */
 #defaultindex .col-6 {
@@ -61,6 +64,8 @@ body {
     
 }
 
+
+
 /* login panel */
 #loginpanel {
     color: white;
@@ -68,6 +73,7 @@ body {
     position: absolute;
     top: 100px;
     left: 100px;
+    width: 350px;
 }
 
 #loginpanel form {
@@ -75,13 +81,23 @@ body {
     text-align: left;
 }
 
+#login, #register {
+    transition: 0.3s ease-in-out;
+}
+
 #rform {
     display: none;
 }
 
-a {
-    cursor: pointer;
+#loginpanel #submitlr {
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    background-color: gold;
+    padding: 10px 20px;
 }
+
+
 
 /* CRUD page */
 #controller .col-3, #controller .col-9 {
